Fix content spacing, add temporary card

--- a/website/scss/abstracts/_variables.scss
+++ b/website/scss/abstracts/_variables.scss
@@ -11,4 +11,4 @@ $large-shadow-drop-shadow: drop-shadow(0px 5.1px 4.3px rgba(0, 0, 0, 0.042))
     drop-shadow(0px 14.1px 11.8px rgba(0, 0, 0, 0.06)) drop-shadow(0px 34.1px 28.3px rgba(0, 0, 0, 0.078))
     drop-shadow(0px 113px 94px rgba(0, 0, 0, 0.12));
 
-$wave-height: 20vh;
+$wave-height: 15vh;
