--- a/website/scss/sections/_about.scss
+++ b/website/scss/sections/_about.scss
@@ -3,4 +3,5 @@ section#about {
     min-height: 100vh;
     margin-top: -$wave-height;
     z-index: 10;
+    padding-top: $wave-height;
 }
